--- a/index.html
+++ b/index.html
@@ -72,22 +72,28 @@
         <section class="features">
             <div class="container clearfix">
                 <article class="feature__item">
-                    <div class="feature__icon feature__icon--sites"></div>
+                    <div class="feature__icon">
+                        <img src="images/feature-1.png" height="124" width="240" alt="Sites">
+                    </div>
                     <h2 class="feature__title">Веб-сайты</h2>
                     <p class="feature__description">Мир никогда не будет прежним после того как увидит ваш сайт!</p>
-                    <a href="#" class="btn btn--feature">ЗАКАЗАТЬ</a>
+                    <a href="#" class="btn btn--feature btn--sites">ЗАКАЗАТЬ</a>
                 </article>
                 <article class="feature__item">
-                    <div class="feature__icon feature__icon--apps"></div>
+                    <div class="feature__icon">
+                        <img src="images/feature-2.png" height="124" width="240" alt="Apps">
+                    </div>
                     <h2 class="feature__title">Приложения</h2>
                     <p class="feature__description">Покорите топ-10 приложений в AppStore и Google Play</p>
-                    <a href="#" class="btn btn--feature">ЗАКАЗАТЬ</a>
+                    <a href="#" class="btn btn--feature btn--apps">ЗАКАЗАТЬ</a>
                 </article>
                 <article class="feature__item">
-                    <div class="feature__icon feature__icon--presentations"></div>
+                    <div class="feature__icon">
+                        <img src="images/feature-3.png" height="124" width="240" alt="Presentation">
+                    </div>
                     <h2 class="feature__title">Презентации</h2>
                     <p class="feature__description">Вы даже не подозреваете, насколько вы изумительны!</p>
-                    <a href="#" class="btn btn--feature">ЗАКАЗАТЬ</a>
+                    <a href="#" class="btn btn--feature btn--presentation">ЗАКАЗАТЬ</a>
                 </article>
             </div>
         </section>
@@ -97,43 +103,61 @@
                 <div class="content-column clearfix">
                     <div class="content-column__left">
                         <p class="index-content__title"><b>Мы — маленькая, но гордая дизайн-студия из Краснодара</b></p>
-                        <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет выше креатива. Работаем не покладая рук, как роботы.</p>
+                        <p class="index-content__text">Исповедуем принципы минимализма и чистоты. Ставим математический расчет выше креатива. Работаем не покладая рук, как роботы.</p>
                     </div>
                     <div class="content-column__right">
-                        <img src="images/logo-since.png" height="75" width="187" alt="Logotype since">
+                        <div class="content-column__logo-since">
+                            <img src="images/logo-since.png" height="75" width="187" alt="Logotype since">
+                            <div class="content-column__logo-label">
+                                <span>Since 2004</span>
+                            </div>
+                        </div>
+
                     </div>
                 </div>
-                <div class="content-column clearfix">
-                    <div class="content-column__left">
-                        <h2 class="tasks__title">Выполняем заказы на разработку:</h2>
-                        <ul class="tasks__list">
-                            <li class="tasks__item">Веб-сайтов любой сложности</li>
-                            <li class="tasks__item">Мобильных приложений для iOS и Android</li>
-                            <li class="tasks__item">Слайдшоу и видео для корпоративных презентаций</li>
+                <div class="working-conditions  clearfix">
+                    <div class="working-conditions  working-conditions--left">
+                        <h2 class="working-conditions__title">Выполняем заказы на разработку:</h2>
+                        <ul class="working-conditions__list">
+                            <li class="working-conditions__item">Веб-сайтов любой сложности</li>
+                            <li class="working-conditions__item">Мобильных приложений для iOS и Android</li>
+                            <li class="working-conditions__item">Слайдшоу и видео для корпоративных презентаций</li>
                         </ul>
                     </div>
-                    <div class="content-column__right">
-                        <h2 class="work__title">КАК Мы работаем:</h2>
-                        <ul class="work__list">
-                            <li class="work_item">С самоотдачей 146%</li>
-                            <li class="work_item">Соблюдая сроки на 100%</li>
-                            <li  class="work_item">По предоплате 50%</li>
+                    <div class="working-conditions  working-conditions--right">
+                        <h2 class="working-conditions__title">КАК Мы работаем:</h2>
+                        <ul class="working-conditions__list">
+                            <li class="working-conditions__item">С самоотдачей 146%</li>
+                            <li class="working-conditions__item">Соблюдая сроки на 100%</li>
+                            <li  class="working-conditions__item">По предоплате 50%</li>
                         </ul>
                     </div>
                 </div>
             </div>
         </div>
 
-        <div class="logo">
-            <div class="container clearfix">
-                <div class="logo__item">
-                    <img src="" alt="" height="" width="">
-                </div>
-                <div class="logo__item">
-                    <img src="" alt="" height="" width="">
-                </div>
-                <div class="logo__item">
-                    <img src="" alt="" height="" width="">
+
+        <div class="container">
+            <div class="logo">
+                <div class="logo__list  clearfix">
+                    <div class="logo__item">
+                        <a href="#">
+                            <img class="logo__img logo__img--link" src="images/logos-1.png" height="37" width="198" alt="Glukhanko">
+                            <img class="logo__img logo__img--active" src="images/logos-1-hover.png" height="37" width="198" alt="Glukhanko">
+                        </a>
+                    </div>
+                    <div class="logo__item">
+                        <a href="#">
+                            <img class="logo__img logo__img--link" src="images/logos-2.png" height="68" width="199" alt="html academy">
+                            <img class="logo__img logo__img--active" src="images/logos-2-hover.png" height="68" width="199" alt="html academy">
+                        </a>
+                    </div>
+                    <div class="logo__item">
+                        <a href="#">
+                            <img class="logo__img logo__img--link" src="images/logos-3.png" height="86" width="209" alt="Borodinski">
+                            <img class="logo__img logo__img--active" src="images/logos-3-hover.png" height="90" width="209" alt="Borodinski">
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -147,9 +171,9 @@
     <footer class="page-footer">
         <div class="container clearfix">
             <section class="footer-social">
-                <a href="#" class="social-btn social-btn__vk">ВКонтакте</a>
-                <a href="#" class="social-btn social-btn__fb">Facebook</a>
-                <a href="#" class="social-btn social-btn__inst">Instagram</a>
+                <a href="#" class="social-btn social-btn--vk">ВКонтакте</a>
+                <a href="#" class="social-btn social-btn--fb">Facebook</a>
+                <a href="#" class="social-btn social-btn--inst">Instagram</a>
             </section>
             <div class="page-footer__discount">
                 <p class="footer-discount__title">Давайте дружить, это выгодно!</p>
