--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                     </div>
                 </div>
                 <div class="working-conditions  clearfix">
-                    <div class="working-conditions  working-conditions--left">
+                    <div class="working-conditions__left">
                         <h2 class="working-conditions__title">Выполняем заказы на разработку:</h2>
                         <ul class="working-conditions__list">
                             <li class="working-conditions__item">Веб-сайтов любой сложности</li>
@@ -124,7 +124,7 @@
                             <li class="working-conditions__item">Слайдшоу и видео для корпоративных презентаций</li>
                         </ul>
                     </div>
-                    <div class="working-conditions  working-conditions--right">
+                    <div class="working-conditions__right">
                         <h2 class="working-conditions__title">КАК Мы работаем:</h2>
                         <ul class="working-conditions__list">
                             <li class="working-conditions__item">С самоотдачей 146%</li>
