Fixed map, fixed links

--- a/catalog.html
+++ b/catalog.html
@@ -23,14 +23,14 @@
             </ul>
 
             <ul class="main-nav__items">
-                <li class="main-nav__item  main-nav__item--active">
-                    <span>Студия</span>
+                <li class="main-nav__item">
+                    <a href="index.html">Студия</a>
                 </li>
                 <li class="main-nav__item">
                     <a href="#">Клиенты</a>
                 </li>
-                <li class="main-nav__item">
-                    <a href="catalog.html">Магазин</a>
+                <li class="main-nav__item  main-nav__item--active">
+                    <span>Магазин</span>
                 </li>
                 <li class="main-nav__item">
                     <a href="#">Контакты</a>
@@ -244,10 +244,7 @@
     </section>
 </main>
 
-
-<div class="map">
-    <img src="images/map.png" alt="Map address" height="416" width="1199">
-</div>
+<div class="map"></div>
 
 <footer class="page-footer">
     <div class="container clearfix">
